--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "npm-run-all": "^4.1.5",
     "pg": "^8.2.1",
     "regenerator-runtime": "^0.13.5",
-    "save-dev": "0.0.1-security"
+    "save-dev": "0.0.1-security",
+    "stripe": "^8.106.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
