--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node ./dist-api/bin/server.js",
+    "start": "node ./api/bin/server.js",
     "dev": "NODE_ENV=development npm-run-all build start",
     "prod": "NODE_ENV=production npm-run-all build start",
     "--": "----",
@@ -62,18 +62,18 @@
     "@okta/oidc-middleware": "^4.0.1",
     "apidoc": "^0.23.0",
     "apidoc-markdown": "^5.1.4",
+    "babel-preset-es2015": "^6.24.1",
     "cookie-parser": "~1.4.4",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
     "helmet": "^3.23.1",
     "http-errors": "~1.8.0",
-    "knex": "^0.21.6",
     "morgan": "~1.9.1",
-    "npm-run-all": "^4.1.5",
     "pg": "^8.4.0",
     "regenerator-runtime": "^0.13.5",
     "save-dev": "0.0.1-security",
@@ -92,7 +92,9 @@
     "eslint-plugin-standard": "^4.0.1",
     "faker": "^4.1.0",
     "jest": "^25.2.4",
+    "knex": "^0.21.6",
     "nodemon": "^2.0.4",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "supertest": "^4.0.2"
