--- a/package.json
+++ b/package.json
@@ -1,21 +1,12 @@
 {
-  "name": "labs-api-starter",
+  "name": "story-squad-api-starter",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node ./api/bin/server.js",
-    "dev": "NODE_ENV=development npm-run-all build start",
-    "prod": "NODE_ENV=production npm-run-all build start",
-    "--": "----",
+    "start": "node ./dist-api/bin/server.js",
     "tests": "npx jest --forceExit",
     "watch:dev": "nodemon",
-    "lint": "npx eslint .",
-    "lint:fix": "npx eslint --fix .",
-    "format": "npx prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|md)\"",
     "knex": "npx knex --knexfile config/knexfile.js",
-    "---": "----",
-    "docs": "rm -rf apidoc && npx apidoc -f \"api/routes/.*\\.js$\" -i ./ -o apidoc/ && npx apidoc-markdown -p apidoc -o DOCUMENTATION.md",
-    "----": "----",
     "transpile": "npx babel ./api --out-dir dist-api",
     "clean": "rm -rf dist-api",
     "build": "npx npm-run-all clean transpile"
@@ -71,10 +62,12 @@
     "esm": "^3.2.25",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
+    "faker": "^4.1.0",
     "helmet": "^3.23.1",
     "http-errors": "~1.8.0",
     "knex": "^0.21.6",
     "morgan": "~1.9.1",
+    "npm-run-all": "^4.1.5",
     "pg": "^8.4.0",
     "regenerator-runtime": "^0.13.5",
     "save-dev": "0.0.1-security",
@@ -91,10 +84,8 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "faker": "^4.1.0",
     "jest": "^25.2.4",
     "nodemon": "^2.0.4",
-    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "supertest": "^4.0.2"
