--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "@okta/oidc-middleware": "^4.0.1",
     "apidoc": "^0.23.0",
     "apidoc-markdown": "^5.1.4",
-    "babel": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "cookie-parser": "~1.4.4",
     "core-js": "^3.6.5",
@@ -75,6 +74,7 @@
     "stripe": "^8.106.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "cross-env": "^7.0.2",
     "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.11.0",
