--- a/package.json
+++ b/package.json
@@ -65,15 +65,15 @@
     "knex": "^0.21.6",
     "morgan": "~1.9.1",
     "npm-run-all": "^4.1.5",
-    "pg": "^8.4.0",
+    "pg": "^8.4.1",
     "regenerator-runtime": "^0.13.5",
     "save-dev": "0.0.1-security",
-    "stripe": "^8.106.0"
+    "stripe": "^8.110.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "cross-env": "^7.0.2",
-    "eslint": "^7.3.1",
+    "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.21.2",
@@ -87,5 +87,9 @@
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "supertest": "^4.0.2"
+  },
+  "engines": {
+    "node": ">= 12.19.0",
+    "npm": ">= 6.14.4"
   }
 }
