--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@okta/oidc-middleware": "^4.0.1",
     "apidoc": "^0.23.0",
     "apidoc-markdown": "^5.1.4",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
