--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./api/bin/server.js",
     "tests": "npx jest --forceExit",
-    "watch:dev": "nodemon",
+    "server": "nodemon",
     "knex": "npx knex --knexfile config/knexfile.js"
   },
   "jest": {
@@ -24,18 +24,6 @@
   },
   "apidoc": {
     "title": "Labs API Starter Scaffolding"
-  },
-  "nodemonConfig": {
-    "exec": "npm run dev",
-    "watch": [
-      "api/*",
-      "public/*"
-    ],
-    "ignore": [
-      "**/__tests__/**",
-      "*.test.js",
-      "*.spec.js"
-    ]
   },
   "dependencies": {
     "@okta/jwt-verifier": "^1.0.0",
