--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "helmet": "^3.23.1",
     "http-errors": "~1.8.0",
     "knex": "^0.21.6",
+    "knex-cleaner": "^1.3.1",
     "morgan": "~1.9.1",
     "npm-run-all": "^4.1.5",
     "pg": "^8.4.1",
