--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "supertest": "^4.0.2"
   },
   "engines": {
-    "node": ">= 12.19.0",
-    "npm": ">= 6.14.4"
+    "node": ">= 12.x",
+    "npm": ">= 6.x"
   }
 }
