--- a/.env.sample
+++ b/.env.sample
@@ -1,18 +1,12 @@
 PORT=8000
-PG_CONNECTION_STRING=postgres://docker:docker@127.0.0.1:5400/api-dev
-
-
-PORT=8000
 PG_CONNECTION_STRING=
 NODE_ENV=
 BASE_URL=
-SESSION_SECRET="another secret"
-PG_USERNAME=
-PG_PASSWORD=
+SESSION_SECRET=
 DATABASE_URL=
 OKTA_URL_ISSUER=
 OKTA_CLIENT_ID=
-OKTA_CLIENT_SECRET=secret
+OKTA_CLIENT_SECRET=
 DS_ADMIN_SECRET=
-ENDPOINT_SECRET=whsec_...
-HASH_ROUNDS=12
+ENDPOINT_SECRET=
+HASH_ROUNDS=
